# SortingAlgorithmsVisualizationProject-UniversityTask

./: CMakeLists.txt  README.md  file_operations.cpp  main.cpp  sorting_algorithms.cpp  tools.cpp  visuals.cpp
cpp_files/: file_operations.cpp  sorting_algorithms.cpp  tools.cpp  visuals.cpp
headers/: file_operations.h  sorting_algorithms.h  tools.h  visuals.h
